# LabOps-Agent

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  ProjectDesc.md  README.md  SUMMARY.md
.github/workflows/: README.md  ci.yml
cmake/: FindVendorSDK.cmake  README.md
docs/: README.md  architecture_invariants.md  code_smartness_levelup.md  real_backend_setup.md  real_backend_troubleshooting.md  release_verification.md  scenario_schema.md  triage_bundle_spec.md  webcam_backend.md  webcam_linux_troubleshooting.md
docs/integration/: README.md  real_sdk_backend.md
docs/playbooks/: README.md  agent_decisions.md
scenarios/: README.md  dropped_frames.json  foo.json  sim_baseline.json  trigger_roi.json
src/: README.md
src/agent/: README.md  engineer_packet_writer.cpp  engineer_packet_writer.hpp  experiment_runner.cpp  experiment_runner.hpp  experiment_state.cpp  experiment_state.hpp  playbook.cpp  playbook.hpp  state_writer.cpp  state_writer.hpp  stop_conditions.cpp  stop_conditions.hpp  variant_generator.cpp  variant_generator.hpp
src/artifacts/: README.md  bundle_manifest_writer.cpp  bundle_manifest_writer.hpp  bundle_registry.cpp  bundle_registry.hpp  bundle_zip_writer.cpp  bundle_zip_writer.hpp  camera_config_writer.cpp  camera_config_writer.hpp  config_report_writer.cpp  config_report_writer.hpp  config_verify_writer.cpp  config_verify_writer.hpp  hostprobe_writer.cpp  hostprobe_writer.hpp  html_report_writer.cpp  html_report_writer.hpp  kb_draft_writer.cpp  kb_draft_writer.hpp  metrics_diff_writer.cpp  metrics_diff_writer.hpp  metrics_writer.cpp  metrics_writer.hpp  output_dir_utils.hpp  run_summary_writer.cpp  run_summary_writer.hpp  run_writer.cpp  run_writer.hpp  scenario_writer.cpp  scenario_writer.hpp
src/backends/: README.md  camera_backend.hpp
src/backends/real_sdk/: README.md  acquisition_loop.cpp  acquisition_loop.hpp  apply_params.cpp  apply_params.hpp  error_mapper.cpp  error_mapper.hpp  frame_provider.cpp  frame_provider.hpp  (+16 more)
src/core/: README.md  fs_utils.hpp  json_dom.hpp  json_utils.hpp  time_utils.hpp
src/events/: README.md  emitter.cpp  emitter.hpp  event_model.cpp  event_model.hpp  jsonl_writer.cpp  jsonl_writer.hpp  transport_anomaly.cpp  transport_anomaly.hpp
src/hostprobe/: README.md  system_probe.cpp  system_probe.hpp  system_probe_common.cpp  system_probe_internal.hpp  system_probe_linux.cpp  system_probe_macos.cpp  system_probe_windows.cpp
src/labops/: README.md  main.cpp
src/metrics/: README.md  anomalies.cpp  anomalies.hpp  csv_writer.cpp  csv_writer.hpp  fps.cpp  fps.hpp
src/scenarios/: README.md  model.cpp  model.hpp  netem_profile_support.cpp  netem_profile_support.hpp  validator.cpp  validator.hpp
tests/: README.md
tests/agent/: README.md  agent_state_writer_smoke.cpp  agent_triage_integration_smoke.cpp  engineer_packet_writer_smoke.cpp  experiment_runner_failure_smoke.cpp  experiment_runner_smoke.cpp  oaat_variant_generator_smoke.cpp  playbook_selection_smoke.cpp  stop_conditions_smoke.cpp
tests/artifacts/: README.md  bundle_manifest_writer_smoke.cpp  bundle_registry_smoke.cpp  bundle_zip_writer_smoke.cpp  camera_config_writer_smoke.cpp  config_report_writer_smoke.cpp  config_verify_writer_smoke.cpp  html_report_writer_smoke.cpp  metrics_writers_smoke.cpp  run_writer_smoke.cpp  scenario_writer_smoke.cpp
tests/backends/: README.md  mock_node_map_adapter_smoke.cpp  node_map_adapter_smoke.cpp  param_key_map_smoke.cpp  real_acquisition_loop_mock_provider_smoke.cpp  real_apply_params_rule_table_smoke.cpp  real_apply_params_smoke.cpp  real_backend_factory_smoke.cpp  real_device_enumeration_smoke.cpp  real_device_selector_resolution_smoke.cpp  real_error_mapper_smoke.cpp  real_frame_acquisition_smoke.cpp  real_reconnect_policy_smoke.cpp  real_stream_session_smoke.cpp  real_transport_counters_smoke.cpp  sdk_context_smoke.cpp  sdk_stub_backend_smoke.cpp  sim_backend_interface_smoke.cpp  sim_fault_injection_smoke.cpp  sim_frame_generator_smoke.cpp  webcam_backend_smoke.cpp  webcam_capture_clock_smoke.cpp  webcam_device_model_smoke.cpp  webcam_device_selector_smoke.cpp  webcam_linux_mock_provider_smoke.cpp  webcam_linux_v4l2_capture_device_smoke.cpp  webcam_opencv_mock_provider_smoke.cpp
tests/common/: README.md  assertions.hpp  cli_dispatch.hpp  run_fixtures.hpp  scenario_fixtures.hpp  temp_dir.hpp
tests/core/: README.md  event_json_test.cpp  schema_json_test.cpp
tests/events/: README.md  emitter_smoke.cpp  events_jsonl_smoke.cpp  transport_anomaly_smoke.cpp
tests/hostprobe/: README.md  redaction_smoke.cpp
tests/labops/: README.md  architecture_contract_check_smoke.cpp  baseline_capture_smoke.cpp  bundle_layout_consistency_smoke.cpp  bundle_zip_on_demand_smoke.cpp  compare_diff_smoke.cpp  kb_draft_from_run_folder_smoke.cpp  list_backends_smoke.cpp  list_devices_real_backend_smoke.cpp  list_devices_webcam_backend_smoke.cpp  logging_contract_smoke.cpp  netem_option_contract_smoke.cpp  real_apply_mode_events_smoke.cpp  run_backend_connect_failure_smoke.cpp  run_device_selector_resolution_smoke.cpp  run_interrupt_flush_smoke.cpp  run_reconnect_policy_smoke.cpp  run_single_process_lock_smoke.cpp  run_stream_trace_smoke.cpp  run_threshold_failure_smoke.cpp  run_webcam_selector_resolution_smoke.cpp  sdk_log_capture_smoke.cpp  sim_determinism_golden_smoke.cpp  soak_checkpoint_resilience_smoke.cpp  soak_checkpoint_resume_smoke.cpp  soak_checkpoint_store_smoke.cpp  starter_scenarios_e2e_smoke.cpp  validate_actionable_smoke.cpp
tests/manual/: README.md  real_camera_smoke_scenario.json  webcam_linux_smoke_scenario.json
tests/metrics/: README.md  anomaly_detection_smoke.cpp  drop_injection_smoke.cpp  fps_metrics_smoke.cpp  jitter_injection_smoke.cpp
tests/scenarios/: README.md  scenario_model_equivalence_smoke.cpp  scenario_validation_smoke.cpp  sim_baseline_metrics_integration_smoke.cpp
tests/schema/: README.md  run_contract_json_smoke.cpp
tools/: README.md  check_sdk_leaks.sh  clang_format.sh
tools/netem_profiles/: README.md  jitter_light.json  loss_medium.json  reorder_light.json
(+58 files in other folders)
